# CMakeList.txt : CMake project for fibonacci_heap, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (fibonacci_heap "fibonacci_heap.cpp" "fibonacci_heap.h")

# TODO: Add tests and install targets if needed.
